# basic

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  logfile.txt  pyproject.toml  run.py  run.sh
.arkitekt/: config.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
